--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Guest Book</title>
+  <title>Guest Book 1</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
