--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Guest Book 1</title>
+  <title>Guest Book</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <h1>My Guest Book</h1>
+  <h1>My Guest Book 2</h1>
   <form name="gbForm" method="post" action="URL_to_script">
     <output id="errors"></output>
     <fieldset>
